# HashMM-RAG

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  quickstart.ipynb  requirements.txt
docs/: CONTEXT.md  NEXT_STEPS.md  architecture.md  setup-zh.md  setup.md  talking_points.md
frontend/: index.html
hashmm/: __init__.py  config.py
hashmm/agent/: __init__.py  graph.py  llm.py  memory_nodes.py  nodes.py  state.py
hashmm/api/: __init__.py  server.py
hashmm/benchmark/: __init__.py  evaluator.py  ocr.py  reports.py  retrievers.py  runner.py  vidore_loader.py
hashmm/hashing/: __init__.py  dataset.py  encoders.py  hash_net.py  index.py  losses.py  train.py
hashmm/ingestion/: __init__.py  adapter.py  chunk_extractor.py
hashmm/mcp_server/: __init__.py  __main__.py  server.py
hashmm/memory/: __init__.py  episodic.py  metrics.py  schema.sql  semantic_cache.py  working.py
hashmm/retrieval/: __init__.py  base.py  hash_retriever.py  hybrid_router.py  post_process.py  vector_retriever.py
hashmm/utils/: __init__.py  logging.py
indexes/: hash_256bit.faiss
scripts/: 00_download_arxiv.py  01_parse_documents.py  02_extract_pairs.py  03_train_hash_net.py  04_build_index.py  05_query.py  06_agent_query.py  07_semcache_stats.py  08_session_resume.py  09_run_vidore.py  10_finetune_vidore.py  12_encode_datasets.py  13_train_multidataset.py  16_run_generalization.py  17_rebuild_clean_index.py  demo_gradio.py  paper_list.py  run_overnight.sh  run_parse_overnight.sh  setup_vllm_backend.sh  setup_vlm_transformers.sh
tests/: test_agent.py  test_benchmark.py  test_chunk_extractor.py  test_config_and_bits.py  test_memory.py  test_retrieval.py
