[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hashmm-rag"
version = "0.5.0"
description = "Cross-Modal Hash-Augmented Multimodal RAG"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "augety121" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

# Core deps — kept lean. Everything heavy is in extras.
dependencies = [
    "numpy>=1.24,<3",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "rich>=13.7",
]

[project.optional-dependencies]
# Hash training + retrieval (the M2/M3 core path).
#
# IMPORTANT: we do NOT list torch / torchvision / transformers / accelerate
# here. These come preinstalled in cloud images (AutoDL, Vast.ai, etc.) and
# upgrading them is dangerous — pip is not aware of which CUDA build is
# present and will happily replace a CUDA-12.4 torch with a CUDA-13 wheel
# that crashes silently into CPU. Install transformers/accelerate yourself
# if missing (`pip install transformers accelerate Pillow sentencepiece`).
hash = [
    "Pillow>=10.0",
    "sentencepiece>=0.2",
    "faiss-cpu>=1.8;platform_system!='Windows'",
]

# Ingestion via RAG-Anything (HKUDS)
ingest = [
    "raganything>=1.3",
    "lightrag-hku",
]

# Agent layer (M4) — added in Phase 2, kept here so deps install in one shot
agent = [
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
]

# MCP server (M6)
mcp = [
    "mcp>=1.2",
]

# Benchmarks & evaluation
eval = [
    "pandas>=2.2",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
]

all = [
    "hashmm-rag[hash,ingest,agent,mcp,eval]",
]

dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/augety121/hashmm-rag"
Repository = "https://github.com/augety121/hashmm-rag"
Issues = "https://github.com/augety121/hashmm-rag/issues"

[tool.setuptools.packages.find]
include = ["hashmm*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
